<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:backgroundTint="@color/light_orange"
    android:clickable="false"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/jobHistoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/job_position1"
                android:fontFamily="@font/sfuitext_bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jobHistorySeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/job_alias_separator"
                android:fontFamily="@font/sfuitext_bold"
                android:padding="3dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jobHistoryCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/job_company1"
                android:fontFamily="@font/sfuitext_bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/jobHistoryCompanyAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:fontFamily="@font/sfuitext_medium"
            android:text="@string/job_company_address1"
            android:textColor="@color/black"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/jobHistorySalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/job_salary1"
            android:fontFamily="@font/sfuitext_mediumitalic"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/jobHistoryWorkingPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:fontFamily="@font/sfuitext_medium"
            android:text="@string/job_working_period1"
            android:textColor="@color/black"
            android:textStyle="normal" />

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
